{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 9,
  "lineage": "9da17e24-b720-5bfd-710a-d0adeeda969f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008ed2f9b1e8be4e3",
            "association_id": "eipassoc-0d69f8b75c1d114f8",
            "domain": "vpc",
            "id": "eipalloc-008ed2f9b1e8be4e3",
            "instance": "i-0ebc5b063bca7e9c7",
            "network_border_group": "us-east-2",
            "network_interface": "eni-027f10a30231bb605",
            "private_dns": "ip-10-0-59-56.us-east-2.compute.internal",
            "private_ip": "10.0.59.56",
            "public_dns": "ec2-18-216-230-213.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.230.213",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.test-ec2-instance",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f19d220602031aed",
            "arn": "arn:aws:ec2:us-east-2:534881985861:instance/i-0ebc5b063bca7e9c7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebc5b063bca7e9c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myfirstserver",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-027f10a30231bb605",
            "private_dns": "ip-10-0-59-56.us-east-2.compute.internal",
            "private_ip": "10.0.59.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea4e07cbeb289524",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-071ef2cbcf58f7faa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df21ad4edc5a4b80",
            "tags": {
              "Name": "my-first-instance-asies"
            },
            "tags_all": {
              "Name": "my-first-instance-asies"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071ef2cbcf58f7faa"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534881985861:internet-gateway/igw-094609b0db4076a6e",
            "id": "igw-094609b0db4076a6e",
            "owner_id": "534881985861",
            "tags": {
              "Name": "test-env-gw"
            },
            "tags_all": {
              "Name": "test-env-gw"
            },
            "vpc_id": "vpc-081914db813a98307"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534881985861:route-table/rtb-0f772d114b6992282",
            "id": "rtb-0f772d114b6992282",
            "owner_id": "534881985861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094609b0db4076a6e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table"
            },
            "tags_all": {
              "Name": "test-env-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-081914db813a98307"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090d31c0ed4fe2567",
            "route_table_id": "rtb-0f772d114b6992282",
            "subnet_id": "subnet-0df21ad4edc5a4b80"
          },
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534881985861:security-group/sg-071ef2cbcf58f7faa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071ef2cbcf58f7faa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "534881985861",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081914db813a98307"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534881985861:subnet/subnet-0df21ad4edc5a4b80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0df21ad4edc5a4b80",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "534881985861",
            "vpc_id": "vpc-081914db813a98307"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534881985861:vpc/vpc-081914db813a98307",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6c3954cadc2c746",
            "default_route_table_id": "rtb-0566e3160f9510fe8",
            "default_security_group_id": "sg-024d3723d83476c4f",
            "dhcp_options_id": "dopt-03dfdbb35b2ca7475",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-081914db813a98307",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0566e3160f9510fe8",
            "owner_id": "534881985861",
            "tags": {
              "Name": "test_env"
            },
            "tags_all": {
              "Name": "test_env"
            }
          }
        }
      ]
    }
  ]
}